# agent_sdk_test

./: .env.example  .gitignore  README.md  pyproject.toml
agent_sdk_version/: README.md  cli_sdk.py  litellm_config.yaml  run_proxy.sh  sdk_agent.py  tools_sdk.py
app/: agent.py  api.py  chatbot.py  cli.py  config.py  llm.py  rag.py  tools.py
docker/: 01_serve_model.sh  healthcheck.sh  stop_model.sh
docs/: arquitectura.html
knowledge_base/: guia_proyecto.md
scripts/: download_model.sh  raw_toolcall_test.py
tests/: test_llm.py  test_tools.py
